from file bug fixed and includes implemented

--- a/DS1/DS1.vcxproj.filters
+++ b/DS1/DS1.vcxproj.filters
@@ -54,5 +54,8 @@
     <Text Include="in.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="in2.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
