--- a/DS1/DS1.vcxproj.filters
+++ b/DS1/DS1.vcxproj.filters
@@ -44,6 +44,9 @@
     <ClInclude Include="Node.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="variables.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="cookies.csv">
