--- a/DS1/DS1.vcxproj
+++ b/DS1/DS1.vcxproj
@@ -137,6 +137,8 @@
     <ClInclude Include="logo.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="notification.h" />
+    <ClInclude Include="configs.h" />
+    <ClInclude Include="profiles.h" />
     <ClInclude Include="variables.h" />
     <ClInclude Include="visualizer.h" />
   </ItemGroup>
